# wander_cloud

./: CMakeLists.txt  howtouse.txt  package.xml
config/: detect_objects.yaml  testyaml.yaml
data/: black_far1.pcd  black_far2.pcd  black_far3.pcd  black_far4.pcd  black_far5.pcd  black_far_cut1.pcd  black_far_cut2.pcd  black_far_cut3.pcd  black_far_cut4.pcd  black_far_cut5.pcd  cylinder_and_2plane.pcd  cylinder_and_2plane_seg.pcd  cylinder_and_plane.pcd  cylinder_downsampled1.pcd  cylinder_downsampled2.pcd  cylinder_sample_2.pcd  detected_circle_from_realsense.pcd  detected_cylinder_from_realsense.pcd  detected_plane_from_realsense.pcd  rotated.pcd  two_plane2_segmented.pcd  two_plane_segmented.pcd  wander_pcl_sample.pcd  white_near2.pcd  white_near_cut1.pcd  white_near_cut2.pcd  white_near_cut3.pcd  white_near_cut4.pcd  white_near_cut5.pcd
launch/: creation.launch  detect_objects.launch  real_vertical.launch  testyaml.launch
src/: check_vertical.cpp  cloud_creator.cpp  cloud_from_realsense.cpp  cloud_test_create.cpp  detect_cylinder.hpp  detect_cylinder_2plane.cpp  detect_cylinder_from_realsense.cpp  detect_intersect_arc.cpp  detect_objects.h  detect_objects_imp.cpp  detect_objects_node.cpp  get_pcd_jpg.cpp  opencv_test_pub.cpp  realtime_detection.cpp  save_realsense_data.cpp  testClient.cpp  testImp.cpp  testInterface.h  test_opencv.cpp  wander_create_2value_img.cpp  wander_detect_cylinder.cpp  wander_detect_face.cpp  wander_mani.cpp  wander_opencv_pub.cpp
srv/: DetectCylinder.srv
